unpackaged/main/default/objects/AcctSeedERP__Sales_Order__c/fields/Account_Alias__c.field-meta.xml
<CustomField>
    <fullName>Account_Alias__c</fullName>
    <formula>AcctSeedERP__Customer__r.Account_Alias__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Alias</label>
    <type>Text</type>
</CustomField>