unpackaged/main/default/objects/AcctSeedERP__Sales_Order__c/fields/Account_MCD_ARID__c.field-meta.xml
<CustomField>
    <fullName>Account_MCD_ARID__c</fullName>
    <formula>AcctSeedERP__Customer__r.Server_MCD_ARID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account MCD ARID</label>
    <type>Text</type>
</CustomField>