unpackaged/main/default/objects/AcctSeedERP__Sales_Order__c/fields/Account_MiVoice_ARID__c.field-meta.xml
<CustomField>
    <fullName>Account_MiVoice_ARID__c</fullName>
    <formula>AcctSeedERP__Opportunity__r.Account.Server_MCD_ARID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account MiVoice ARID</label>
    <type>Text</type>
</CustomField>