unpackaged/main/default/objects/AcctSeedERP__Sales_Order__c/fields/Account_Warning_Message__c.field-meta.xml
<CustomField>
    <fullName>Account_Warning_Message__c</fullName>
    <defaultValue>"Make sure you have selected the correct account based on service/delivery location. Best practice would be to assign the case to the correct account prior to Creating a Sales Order"</defaultValue>
    <label>Account Warning Message</label>
    <type>TextArea</type>
</CustomField>