unpackaged/main/default/objects/AcctSeedERP__Sales_Order__c/fields/AcctSeedERP__Billing_Street__c.field-meta.xml
<CustomField>
    <fullName>AcctSeedERP__Billing_Street__c</fullName>
    <label>Billing Street</label>
    <type>TextArea</type>
</CustomField>