unpackaged/main/default/objects/AcctSeedERP__Sales_Order__c/fields/AcctSeedERP__Ledger__c.field-meta.xml
<CustomField>
    <fullName>AcctSeedERP__Ledger__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Denotes the associated ledger.</inlineHelpText>
    <label>Ledger</label>
    <referenceTo>AcctSeed__Ledger__c</referenceTo>
    <relationshipLabel>Sales Order</relationshipLabel>
    <relationshipName>Sales_Order</relationshipName>
    <type>Lookup</type>
</CustomField>