unpackaged/main/default/objects/AcctSeedERP__Sales_Order__c/fields/AcctSeedERP__Line_Count__c.field-meta.xml
<CustomField>
    <fullName>AcctSeedERP__Line_Count__c</fullName>
    <inlineHelpText>The number of sales order lines associated with the sales order</inlineHelpText>
    <label>Line Count</label>
    <summaryForeignKey>AcctSeedERP__Sales_Order_Line__c.AcctSeedERP__Sales_Order__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>