unpackaged/main/default/objects/AcctSeedERP__Sales_Order__c/fields/AcctSeedERP__Shipping_City__c.field-meta.xml
<CustomField>
    <fullName>AcctSeedERP__Shipping_City__c</fullName>
    <label>Shipping City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>