unpackaged/main/default/objects/AcctSeedERP__Sales_Order__c/fields/AcctSeedERP__Status__c.field-meta.xml
<CustomField>
    <fullName>AcctSeedERP__Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Ready for Pickup</fullName>
            </value>
            <value>
                <fullName>Staged</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Investigating</fullName>
            </value>
            <value>
                <fullName>On Hold-Awaiting Product Shipment</fullName>
            </value>
            <value>
                <fullName>On Hold-By Client</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>