unpackaged/main/default/objects/AcctSeedERP__Sales_Order__c/fields/B_City_State_Zip__c.field-meta.xml
<CustomField>
    <fullName>B_City_State_Zip__c</fullName>
    <formula>AcctSeedERP__Billing_City__c +", "+ AcctSeedERP__Billing_State__c +" "+ AcctSeedERP__Billing_PostalCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>B-City-State-Zip</label>
    <type>Text</type>
</CustomField>