unpackaged/main/default/objects/AcctSeedERP__Sales_Order__c/fields/Billing__c.field-meta.xml
<CustomField>
    <fullName>Billing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing</label>
    <referenceTo>AcctSeed__Billing__c</referenceTo>
    <relationshipLabel>Sales Order</relationshipLabel>
    <relationshipName>Sales_Order</relationshipName>
    <type>Lookup</type>
</CustomField>