unpackaged/main/default/objects/AcctSeedERP__Sales_Order__c/fields/Case_Queue__c.field-meta.xml
<CustomField>
    <fullName>Case_Queue__c</fullName>
    <formula>Case__r.Owner:Queue.QueueName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Queue</label>
    <type>Text</type>
</CustomField>