unpackaged/main/default/objects/AcctSeedERP__Sales_Order__c/fields/City_State_Zip__c.field-meta.xml
<CustomField>
    <fullName>City_State_Zip__c</fullName>
    <formula>AcctSeedERP__Shipping_City__c +", "+ AcctSeedERP__Shipping_State__c +" "+ AcctSeedERP__Shipping_PostalCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>City-State-Zip</label>
    <type>Text</type>
</CustomField>