unpackaged/main/default/objects/AcctSeedERP__Sales_Order__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <inlineHelpText>Add any relevant comments pertaining to this Sales Order that will assist in processing.</inlineHelpText>
    <label>Comments</label>
    <type>TextArea</type>
</CustomField>