unpackaged/main/default/objects/AcctSeedERP__Sales_Order__c/fields/Delivery_Comments__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Comments__c</fullName>
    <inlineHelpText>Enter any comments needed to instruct the warehouse in delivery of these products.</inlineHelpText>
    <label>Delivery Comments</label>
    <length>400</length>
    <type>LongTextArea</type>
</CustomField>