unpackaged/main/default/objects/AcctSeedERP__Sales_Order__c/fields/Delivery_Contact__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Enter the Client Contact name to be included on carrier documentation.</inlineHelpText>
    <label>Delivery Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Sales Order</relationshipLabel>
    <relationshipName>Sales_Order</relationshipName>
    <type>Lookup</type>
</CustomField>