unpackaged/main/default/objects/AcctSeedERP__Sales_Order__c/fields/Delivery_E_Mail__c.field-meta.xml
<CustomField>
    <fullName>Delivery_E_Mail__c</fullName>
    <formula>Delivery_Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivery E-Mail</label>
    <type>Text</type>
</CustomField>