unpackaged/main/default/objects/AcctSeedERP__Sales_Order__c/fields/Delivery_Telephone__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Telephone__c</fullName>
    <formula>Delivery_Contact__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivery Telephone</label>
    <type>Text</type>
</CustomField>