unpackaged/main/default/objects/AcctSeedERP__Sales_Order__c/fields/Opportunity_Complete__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Complete__c</fullName>
    <formula>AcctSeedERP__Opportunity__r.Install_Complete__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Complete</label>
    <type>Checkbox</type>
</CustomField>