unpackaged/main/default/objects/AcctSeedERP__Sales_Order__c/fields/Opportunity_Est_Cutover_Date__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Est_Cutover_Date__c</fullName>
    <formula>AcctSeedERP__Opportunity__r.Estimated_Cut_over_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Est Cutover Date</label>
    <type>Date</type>
</CustomField>