unpackaged/main/default/objects/AcctSeedERP__Sales_Order__c/fields/Opportunity_Est_Cutover_Date_YYMM__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Est_Cutover_Date_YYMM__c</fullName>
    <formula>AcctSeedERP__Opportunity__r.Est_Cutover_Date_MonthYear__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Est Cutover YYMM</label>
    <type>Text</type>
</CustomField>