unpackaged/main/default/objects/AcctSeedERP__Sales_Order__c/fields/Opportunity_Install_Status__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Install_Status__c</fullName>
    <formula>Text(AcctSeedERP__Opportunity__r.Install_Status_Opp__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Install Status</label>
    <type>Text</type>
</CustomField>