unpackaged/main/default/objects/AcctSeedERP__Sales_Order__c/fields/Pick_Ticket_Number__c.field-meta.xml
<CustomField>
    <fullName>Pick_Ticket_Number__c</fullName>
    <formula>Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pick Ticket Number</label>
    <type>Text</type>
</CustomField>