unpackaged/main/default/objects/AcctSeedERP__Sales_Order__c/fields/Pre_Configuration_Required__c.field-meta.xml
<CustomField>
    <fullName>Pre_Configuration_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pre-Configuration Required</label>
    <type>Checkbox</type>
</CustomField>