unpackaged/main/default/objects/AcctSeedERP__Sales_Order__c/fields/Preferred_Carrier__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Carrier__c</fullName>
    <inlineHelpText>Enter the preferred carrier to deliver the product to the Client.</inlineHelpText>
    <label>Preferred Carrier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FedEx</fullName>
                <default>true</default>
                <label>FedEx</label>
            </value>
            <value>
                <fullName>IPro Technician-Plano Branch</fullName>
            </value>
            <value>
                <fullName>IPro Technician-Austin Branch</fullName>
            </value>
            <value>
                <fullName>IPro Technician-San Antonio Branch</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>