unpackaged/main/default/objects/AcctSeedERP__Sales_Order__c/fields/Product_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Product_Received_Date__c</fullName>
    <label>Product Received Date</label>
    <type>Date</type>
</CustomField>