unpackaged/main/default/objects/AcctSeedERP__Sales_Order__c/fields/Received_by_Accounting__c.field-meta.xml
<CustomField>
    <fullName>Received_by_Accounting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Received by Accounting</label>
    <type>Checkbox</type>
</CustomField>