unpackaged/main/default/objects/AcctSeedERP__Sales_Order__c/fields/Sales_Order_OPS_Category__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order_OPS_Category__c</fullName>
    <formula>text(AcctSeedERP__Opportunity__r.OPS_Category__c)</formula>
    <label>Sales Order OPS Category</label>
    <type>Text</type>
</CustomField>