unpackaged/main/default/objects/AcctSeedERP__Sales_Order__c/listViews/AcctSeedERP__All.listView-meta.xml
<ListView>
    <fullName>AcctSeedERP__All</fullName>
    <columns>NAME</columns>
    <columns>AcctSeedERP__Customer__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Received_by_Accounting__c</columns>
    <columns>Billing__c</columns>
    <columns>AcctSeedERP__Status__c</columns>
    <columns>AcctSeedERP__Opportunity__c</columns>
    <columns>Case__c</columns>
    <columns>AcctSeedERP__Total__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>