unpackaged/main/default/objects/AcctSeedERP__Sales_Order__c/listViews/AcctSeedERP__Open.listView-meta.xml
<ListView>
    <fullName>AcctSeedERP__Open</fullName>
    <columns>NAME</columns>
    <columns>AcctSeedERP__Customer__c</columns>
    <columns>AcctSeedERP__Status__c</columns>
    <columns>AcctSeedERP__Opportunity__c</columns>
    <columns>AcctSeedERP__Total__c</columns>
    <columns>AcctSeedERP__Ledger__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AcctSeedERP__Status__c</field>
        <operation>equals</operation>
        <value>Open</value>
    </filters>
    <label>Open</label>
</ListView>