unpackaged/main/default/objects/AcctSeedERP__Sales_Order__c/listViews/Closed.listView-meta.xml
<ListView>
    <fullName>Closed</fullName>
    <columns>NAME</columns>
    <columns>Billing__c</columns>
    <columns>AcctSeedERP__Customer__c</columns>
    <columns>AcctSeedERP__Status__c</columns>
    <columns>AcctSeedERP__Opportunity__c</columns>
    <columns>Case__c</columns>
    <columns>AcctSeedERP__Total__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Billing__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>AcctSeedERP__Status__c</field>
        <operation>equals</operation>
        <value>Closed</value>
    </filters>
    <label>Closed</label>
</ListView>