unpackaged/main/default/objects/AcctSeedERP__Sales_Order__c/listViews/On_Hold_Awaiting_Product_Shipment.listView-meta.xml
<ListView>
    <fullName>On_Hold_Awaiting_Product_Shipment</fullName>
    <columns>NAME</columns>
    <columns>Billing__c</columns>
    <columns>AcctSeedERP__Customer__c</columns>
    <columns>AcctSeedERP__Status__c</columns>
    <columns>AcctSeedERP__Opportunity__c</columns>
    <columns>Case__c</columns>
    <columns>AcctSeedERP__Total__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Billing__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>AcctSeedERP__Status__c</field>
        <operation>equals</operation>
        <value>On Hold-Awaiting Product Shipment</value>
    </filters>
    <label>On Hold-Awaiting Product Shipment</label>
    <language>en_US</language>
</ListView>