unpackaged/main/default/objects/AcctSeedERP__Sales_Order__c/listViews/Staged.listView-meta.xml
<ListView>
    <fullName>Staged</fullName>
    <columns>NAME</columns>
    <columns>Billing__c</columns>
    <columns>AcctSeedERP__Customer__c</columns>
    <columns>AcctSeedERP__Status__c</columns>
    <columns>Delivery_Date_Needed__c</columns>
    <columns>AcctSeedERP__Opportunity__c</columns>
    <columns>Case__c</columns>
    <columns>AcctSeedERP__Total__c</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Billing__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>AcctSeedERP__Status__c</field>
        <operation>equals</operation>
        <value>Staged</value>
    </filters>
    <label>Staged</label>
    <language>en_US</language>
</ListView>